--- a/README
+++ b/README
@@ -2,13 +2,5 @@
 
 
 
-
-
-####WORKFLOW FOR GETTING SOUNDS #######
-
-to test if it works add your FWA's name in the FWOA.txt ( yes this is the
-file for friends without accents but just put it temporarily at the top
-of the file) and run 'sudo python align_all.py'  and make sure that the first 
-couple of so ( assuming u added it to the top of the file ) and it will tell you which
-one it has an error in. 
+Work has been done to categorize and classify accents, but mainly with the intent to model accents to enable more robust speech recognizers. Our goal was to build a technology that can pinpoint mistakes and variations in pronunciation that can be used to identify problem areas in foreign speakers. The system we have created uses the Penn Forced Aligner and comparisons between native and foreign speech to successfully identify these problem areas. 
 
